Fix ConcurrentModification exception caused by teleporting